# kalendar-clody

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
resources/: resources.qrc
src/: all.cpp  calendarwidget.cpp  calendarwidget.h  eventmanager.cpp  eventmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  musicplayer.cpp  musicplayer.h  orthodoxholidays.cpp  orthodoxholidays.h  style.h
src/src/: musicplayer.cpp
